--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,10 @@
     "@react-oauth/google": "^0.12.1",
     "@tailwindcss/vite": "^4.0.6",
     "axios": "^1.7.9",
+    "emoji-picker-react": "^4.12.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
