--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,13 +22,15 @@
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.5",
-    "tailwindcss": "^4.0.6"
+    "tailwindcss": "^4.0.6",
+    "w-weather-info": "^1.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
+    "daisyui": "^5.0.0-beta.8",
     "eslint": "^9.19.0",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.0.0",
